--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-slider": "^0.11.0",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.1.1",
     "react-native-switch": "^2.0.0",
     "react-native-tab-view": "2.16.0",
