--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-clipboard/clipboard": "^1.8.2",
-    "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^12.5.0",
@@ -31,10 +31,11 @@
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-i18next": "^11.11.4",
-    "react-native": "0.64.2",
+    "react-native": "^0.66.4",
     "react-native-aws3": "^0.0.9",
     "react-native-camera": "^4.2.0",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-dropdown-picker": "^5.3.0",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.4",
     "react-native-fbsdk-next": "^4.3.0",
@@ -42,13 +43,14 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-modal": "^2.0.4",
-    "react-native-image-picker": "^4.1.1",
+    "react-native-image-picker": "^4.7.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-lightbox-v2": "^0.8.8",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^2.1.1",
     "react-native-maps": "^0.28.0",
     "react-native-media-controls": "^2.3.0",
+    "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-permissions": "^3.0.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-qrcode-generator": "^1.2.2",
@@ -56,7 +58,7 @@
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-range-slider": "^0.1.2",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-slider": "^0.11.0",
