--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "^0.66.4",
     "react-native-aws3": "^0.0.9",
     "react-native-camera": "^4.2.0",
+    "react-native-circular-progress": "^1.3.7",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-elements": "^3.4.2",
