--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -199,6 +199,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release' //upgrade facebook sdk
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
