--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
     "rn-range-slider": "^2.0.4",
-    "socket.io-client": "^4.1.3"
+    "socket.io-client": "^4.1.3",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
