--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-native-fast-image": "^8.5.4",
     "react-native-fbsdk-next": "^4.3.0",
     "react-native-fs": "^2.18.0",
+    "react-native-geocoder": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-modal": "^2.0.4",
