--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ buck-out/
 # CocoaPods
 /ios/Pods/
 android/app/src/main/assets/index.android.bundle
+android/app/src/main/assets/index.android 2.bundle
