--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.21.1",
     "country-state-city": "^3.0.0",
     "i18next": "^21.6.11",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-i18next": "^11.15.4",
@@ -42,6 +43,7 @@
     "react-native-camera": "^4.2.0",
     "react-native-circular-progress": "^1.3.7",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-credit-card-input-plus": "^0.4.3",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.4",
