--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ buck-out/
 /ios/Pods/
 android/app/src/main/assets/index.android.bundle
 android/app/src/main/assets/index.android 2.bundle
+
+#misc
+.env
