--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-circular-progress": "^1.3.7",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-credit-card-input-plus": "^0.4.3",
+    "react-native-dotenv": "^3.3.1",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.4",
