fix iOS warnings and errors, fix for FLIGHT-7
permission handler issue fixed and other warnings in iOS ,

--- a/ios/flighteno/Info.plist
+++ b/ios/flighteno/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow camera to capture photo</string>
 	<key>FacebookDisplayName</key>
 	<string>flighteno-app</string>
 	<key>FacebookAppID</key>
@@ -49,12 +51,6 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>YOUR TEXT HERE</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>YOUR TEXT HERE</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
