--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
     "react-native-maps": "^0.28.0",
     "react-native-media-controls": "^2.3.0",
     "react-native-modal-datetime-picker": "^13.0.1",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-modal-picker": "^0.0.16",
     "react-native-pager-view": "^5.4.9",
+    "react-native-paper": "^4.11.2",
     "react-native-permissions": "^3.3.1",
     "react-native-phone-input": "^1.3.2",
     "react-native-phone-number-input": "^2.1.0",
@@ -94,6 +96,7 @@
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
     "rn-range-slider": "^2.0.4",
+    "sharingan-rn-modal-dropdown": "^1.4.0",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.3"
   },
