--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-native-permissions": "^3.3.1",
     "react-native-phone-input": "^1.3.2",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^5.0.0",
     "react-native-qrcode-generator": "^1.2.2",
     "react-native-qrcode-scanner": "^1.5.4",
