--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-elements": "^3.4.2",
+    "react-native-face-detection": "^0.1.1",
     "react-native-fast-image": "^8.5.4",
     "react-native-fbsdk-next": "^4.3.0",
     "react-native-fs": "^2.18.0",
