--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-aws3": "^0.0.9",
     "react-native-camera": "^4.2.0",
     "react-native-circular-progress": "^1.3.7",
+    "react-native-circular-progress-indicator": "^2.0.6",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-credit-card-input-plus": "^0.4.3",
     "react-native-dotenv": "^3.3.1",
