--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-modal": "^2.0.4",
     "react-native-image-picker": "^4.7.0",
+    "react-native-image-viewing": "^0.2.1",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-lightbox-v2": "^0.8.8",
     "react-native-linear-gradient": "^2.5.6",
