--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-circular-progress": "^1.3.7",
     "react-native-circular-progress-indicator": "^2.0.6",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-credit-card-input-plus": "^0.4.3",
     "react-native-dotenv": "^3.3.1",
     "react-native-dropdown-picker": "^5.3.0",
