google pay initial

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
     <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
     <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
     <meta-data android:name="com.google.firebase.ml.vision.DEPENDENCIES" android:value="ocr, face"/>
+    <meta-data
+    android:name="com.google.android.gms.wallet.api.enabled"
+    android:value="true" />
     <activity android:name=".MainActivity" android:label="@string/app_name" android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode" android:launchMode="singleTask" android:windowSoftInputMode="adjustResize" >
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
