--- a/package.json
+++ b/package.json
@@ -51,12 +51,13 @@
     "react-native-elements": "^3.4.2",
     "react-native-face-detection": "^0.1.1",
     "react-native-fast-image": "^8.5.4",
-    "react-native-fbsdk-next": "^4.3.0",
+    "react-native-fbsdk-next": "^8.0.3",
     "react-native-fs": "^2.18.0",
     "react-native-geocoder": "^0.5.0",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-google-pay": "^2.1.0",
     "react-native-image-modal": "^2.0.4",
     "react-native-image-picker": "^4.7.0",
     "react-native-image-viewing": "^0.2.1",
