--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -32,3 +32,12 @@ org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx1024m
 # org.gradle.parallel=true
 # org.gradle.configureondemand=truenpm start -- --reset-cache
+
+MYAPP_RELEASE_STORE_FILE=upload-keystore.jks
+ MYAPP_RELEASE_KEY_ALIAS=upload
+ MYAPP_RELEASE_STORE_PASSWORD=convrtx
+ MYAPP_RELEASE_KEY_PASSWORD=convrtx
+# MYAPP_RELEASE_STORE_FILE=debug.keystore
+# MYAPP_RELEASE_KEY_ALIAS=androiddebugkey
+# MYAPP_RELEASE_STORE_PASSWORD=android
+# MYAPP_RELEASE_KEY_PASSWORD=android
